# myPrac

./: README.md
CPP/: stringClass  stringClass.cpp
CPP/C++11/: auto_test1  auto_test2  auto_test3  init_list_test  init_list_test.cpp  init_list_test1  init_list_test2  init_list_test3  lambda_test.cpp  lambda_test1  lambda_test3  lambda_test4  lambda_test5  lambda_test6  lambda_test7  regex_test  regex_test.cpp  test_auto.cpp  test_decltype.cpp  test_decltype01  test_decltype02  threadPool  thread_test  thread_test.cpp
CPP/STL/: array_test.cpp  array_test1  array_test2  array_test3  deque_test.cpp  deque_vector_test  deque_vector_test.cpp  list_test.cpp  map_test.cpp  test_deque1  test_list1  test_map1  test_map2  test_map3  test_map4  test_map5  test_unordered_map1  test_unordered_map2  test_unordered_map3  test_vector_access  test_vector_init  test_vector_operation  test_vector_two_dimension  unordered_map_test.cpp  vector_reverse_test  vector_reverse_test.cpp  vector_test.cpp
CPP/std_function/: std_function.cpp  std_function.hpp  test_StrToInt  test_StrToInt.cpp  test_memcpy  test_memcpy.cpp
CPP/tinyProjects/: STL_评委打分  main.cpp  speaker.h  speechManager.cpp  speechManager.h
CPP/tinyProjects/my_json/03/C++/: CMakeLists.txt  leptjson.cpp  leptjson.h  leptjson.h.bk  test.cpp.bk
DesignPattern/: singleton.cpp
leetcode/: \  list.hpp  listCode  listCode.cpp  test_EntryNodeOfLoop  test_MergeKLists  test_addInList  test_removeNthFromEnd
swordToOffer/: MyString  MyString.cpp  Singleton.cpp  Singleton.hpp  singleTon_test  singleTon_test.cpp
(+256 files in other folders)
